--- a/Atividade 2/index.html
+++ b/Atividade 2/index.html
@@ -13,10 +13,10 @@
     <h1>Manu Filmes: Filmes em Cartaz</h1>
     <form>
         <p> Título do filme;
-            <input type="text" id="InTítulo" required>
+            <input type="text" id="inTitulo" required>
         </p>
         <p> Duração (min):
-            <input type="number" id="inDuração" required>
+            <input type="number" id="inDuracao" required>
         <p>
        <input type="submit" value="converter em Horas e Minutos">
     </form>
